--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+FileManipulation/test.zip
+FileManipulation/test.txt
+FileManipulation/script.sh
 
 # Spyder project settings
 .spyderproject
