--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "/home/nvombat/anaconda3/bin/python"
+    "python.pythonPath": "/home/nvombat/anaconda3/bin/python",
+    "files.associations": {
+        "stdlib.h": "c"
+    }
 }
