Half Duplex Chat init

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "python.pythonPath": "/home/nvombat/anaconda3/bin/python",
     "files.associations": {
         "stdlib.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "in.h": "c",
+        "unistd.h": "c"
     }
 }
