Remote Command Exec Using UDP Client Server Model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "in.h": "c",
         "unistd.h": "c",
         "types.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "inet.h": "c"
     }
 }
